--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,24 @@ dependencies {
     //RX
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+
+    //MOXY
+    compile 'com.arello-mobile:moxy:1.5.3'
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
+    compile 'com.arello-mobile:moxy-android:1.5.3'
+    compile 'com.arello-mobile:moxy-app-compat:1.5.3'
+
+    //butterknife
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+
+    //circle
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    //card
+    compile 'com.android.support:cardview-v7:26.1.0'
+
+    //recyclerview
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 }
